# air-license

./: .gitignore  CMakeLists.txt
include/: license_generator.hpp  obfuscate.h
include/air/license/: cloud_instance_id.hpp  cloud_metadata.hpp  cpu_serial.hpp  disk_serial.hpp  identification.hpp  identification_strategy.hpp  license_manager.hpp  mac_adder.hpp  manager.hpp  time_limit.hpp  tool.hpp  utility.hpp
